; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/bcma/extr_driver_pci.c_bcma_core_pci_irq_ctl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/bcma/extr_driver_pci.c_bcma_core_pci_irq_ctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcma_drv_pci = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.pci_dev* }
%struct.pci_dev = type { i32 }
%struct.bcma_device = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64 }

@BCMA_HOSTTYPE_PCI = common dso_local global i64 0, align 8
@BCMA_PCI_IRQMASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bcma_core_pci_irq_ctl(%struct.bcma_drv_pci* %0, %struct.bcma_device* %1, i32 %2) #0 {
  %4 = alloca %struct.bcma_drv_pci*, align 8
  %5 = alloca %struct.bcma_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.pci_dev*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.bcma_drv_pci* %0, %struct.bcma_drv_pci** %4, align 8
  store %struct.bcma_device* %1, %struct.bcma_device** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %10, align 4
  %11 = load %struct.bcma_drv_pci*, %struct.bcma_drv_pci** %4, align 8
  %12 = icmp ne %struct.bcma_drv_pci* %11, null
  br i1 %12, label %13, label %21

13:                                               ; preds = %3
  %14 = load %struct.bcma_device*, %struct.bcma_device** %5, align 8
  %15 = getelementptr inbounds %struct.bcma_device, %struct.bcma_device* %14, i32 0, i32 1
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @BCMA_HOSTTYPE_PCI, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %13, %3
  br label %58

22:                                               ; preds = %13
  %23 = load %struct.bcma_drv_pci*, %struct.bcma_drv_pci** %4, align 8
  %24 = getelementptr inbounds %struct.bcma_drv_pci, %struct.bcma_drv_pci* %23, i32 0, i32 0
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = load %struct.pci_dev*, %struct.pci_dev** %28, align 8
  store %struct.pci_dev* %29, %struct.pci_dev** %7, align 8
  %30 = load %struct.pci_dev*, %struct.pci_dev** %7, align 8
  %31 = load i32, i32* @BCMA_PCI_IRQMASK, align 4
  %32 = call i32 @pci_read_config_dword(%struct.pci_dev* %30, i32 %31, i32* %9)
  store i32 %32, i32* %10, align 4
  %33 = load i32, i32* %10, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %22
  br label %58

36:                                               ; preds = %22
  %37 = load %struct.bcma_device*, %struct.bcma_device** %5, align 8
  %38 = getelementptr inbounds %struct.bcma_device, %struct.bcma_device* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = call i32 @BIT(i32 %39)
  %41 = shl i32 %40, 8
  store i32 %41, i32* %8, align 4
  %42 = load i32, i32* %6, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %48

44:                                               ; preds = %36
  %45 = load i32, i32* %8, align 4
  %46 = load i32, i32* %9, align 4
  %47 = or i32 %46, %45
  store i32 %47, i32* %9, align 4
  br label %53

48:                                               ; preds = %36
  %49 = load i32, i32* %8, align 4
  %50 = xor i32 %49, -1
  %51 = load i32, i32* %9, align 4
  %52 = and i32 %51, %50
  store i32 %52, i32* %9, align 4
  br label %53

53:                                               ; preds = %48, %44
  %54 = load %struct.pci_dev*, %struct.pci_dev** %7, align 8
  %55 = load i32, i32* @BCMA_PCI_IRQMASK, align 4
  %56 = load i32, i32* %9, align 4
  %57 = call i32 @pci_write_config_dword(%struct.pci_dev* %54, i32 %55, i32 %56)
  store i32 %57, i32* %10, align 4
  br label %58

58:                                               ; preds = %53, %35, %21
  %59 = load i32, i32* %10, align 4
  ret i32 %59
}

declare dso_local i32 @pci_read_config_dword(%struct.pci_dev*, i32, i32*) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @pci_write_config_dword(%struct.pci_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
